add --add-opens JVM argument to UI test plugin