@@ -5,6 +5,7 @@ import extensions.configureUiTest
 import extensions.configureUiTestAndroidLibrary
 import org.gradle.api.Plugin
 import org.gradle.api.Project
+import org.gradle.api.tasks.testing.Test
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
 
 class UiTestPlugin : Plugin<Project> {
@@ -17,5 +18,18 @@ class UiTestPlugin : Plugin<Project> {
                     configureUiTestAndroidLibrary(this)
                 }
             }
+
+            addOpensJvmArgsToTestTask()
         }
+
+    private fun Project.addOpensJvmArgsToTestTask() {
+        tasks.withType(Test::class.java).configureEach {
+            jvmArgs(
+                "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+            )
+        }
+    }
 }
